fix(jwt): Read key file